# code-assistant

./: .gitignore  CLAUDE.md  README.md  blog_agent_requirements.md  does-code-assistant-need-large-models.html  pyproject.toml
benchmarks/: compare.py  req_01_calculator.txt  req_02_todo_webapp.txt  req_03_log_analyser.txt
benchmarks/harness/: __main__.py  ca_runner.py  claude_runner.py  evaluator.py  metrics.py  report.py
src/code_assistant/: ca_memory.py  config.py  logger.py  main.py  project_context.py
src/code_assistant/agents/: architect.py  base.py  implementer.py  orchestrator.py  pipeline.py  quick.py  reviewer.py  tester.py  verifier.py
src/code_assistant/feedback/: __init__.py  collector.py  enricher.py  export.py
src/code_assistant/rag/: ast_indexer.py  ast_retriever.py  indexer.py  provider.py  retriever.py
src/code_assistant/session/: history.py  persistence.py
src/code_assistant/tools/: ast_tool.py  file_ops.py  rag_tool.py  registry.py  shell.py  web.py
src/code_assistant/ui/: console.py  diff.py
templates/: requirements.md
