[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-assistant"
version = "0.1.0"
description = "A local code assistant powered by Ollama, with dual-agent debate mode"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
ca = "code_assistant.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/code_assistant"]

[tool.hatch.build.targets.editable]
packages = ["src/code_assistant"]
