[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-assistant"
version = "0.1.0"
description = "A local code assistant powered by Ollama, with dual-agent debate mode"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
ca = "code_assistant.main:run"

[project.optional-dependencies]
benchmark = ["anthropic>=0.40.0"]
ast = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]
# Free web search fallback — only needed if you don't have a serper_api_key.
# fetch_url works with no extra deps (stdlib urllib).
web = ["duckduckgo-search>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/code_assistant"]

[tool.hatch.build.targets.editable]
packages = ["src/code_assistant"]
